hphp/test/slow/enum_class/enum_class14.php.expectf
Fatal error: '__ViaLabel' applied to a non-HH\MemberOf parameter in %s/enum_class14.php on line 11
